--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                   <h1 style="color: #461e74; font-weight: bolder;">App Development</h1>
                   <p style="color: #8064A2; font-weight: bolder;">_______________<span style="color: crimson;">_______________</span>_______________</p>
                   <p>We do custom Website Design, Development, E-commerce Website and </p><p>Annual Maintenance with delightful digital experiences</p>
-                  <a style=" border-radius: 5px 20px 5px 20px;" href="#webdev.html" class="btn btn-danger">Get Started</a>
+                  <a style=" border-radius: 5px 20px 5px 20px;" href="webdev.html" class="btn btn-danger">Get Started</a>
                 </div>
               </div>
             </div>
