linked social media management page

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                   <h1 style="color: #461e74; font-weight: bolder;">Social Media Management</h1>
                   <p style="color: #8064A2; font-weight: bolder;">_____________________<span style="color: crimson;">_____________________</span>_____________________</p>
                   <p>We do custom Website Design, Development, E-commerce Website and </p><p>Annual Maintenance with delightful digital experiences</p>
-                  <a style=" border-radius: 5px 20px 5px 20px;" href="#" class="btn btn-danger">Get Started</a>
+                  <a style=" border-radius: 5px 20px 5px 20px;" href="social.html" class="btn btn-danger">Get Started</a>
                 </div>
               </div>
             </div>
