--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
       <!-- serives -->
       <section id="nav_service">
       <h1 style="text-align: center; padding-bottom: 20px;color: #460C68; font-weight: bolder;">Services</h1>
+      <a href="appdev.html">    
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
@@ -260,6 +261,8 @@
           </div>
         </div>
       </div>
+      </a>
+      <a href="webdev.html">  
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
@@ -273,6 +276,8 @@
           </div>
         </div>
       </div>
+     </a>     
+     <a href="social.html">  
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
@@ -286,6 +291,8 @@
           </div>
         </div>
       </div>
+     </a>
+     <a href="graphics.html">  
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
@@ -299,6 +306,7 @@
           </div>
         </div>
       </div>
+     </a>
       <div style="height: 30px;width: 100%;"></div>
 
       
