--- a/social.html
+++ b/social.html
@@ -19,7 +19,7 @@
 	</div>
 	<div class="menubar" id="navbar">
 		<ul class="menuitems">
-			<li><a href="#home">Home</li>
+			<li><a href="index.html">Home</li>
 			<li><a href="#service">Service</li>
 			<li><a href="#pricing">Pricing</li>
 			<li><a href="#contact">Contact</li>
