--- a/graphics.html
+++ b/graphics.html
@@ -59,7 +59,7 @@
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           
           <li class="nav-item">
-            <a class="nav-link" href="#home">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#about">About</a>
