--- a/appdev.html
+++ b/appdev.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>webassasins.in/AppDevServices</title>
+        <title>App Development Services</title>
 
 <style>
 
