updated our team section

--- a/index.html
+++ b/index.html
@@ -469,6 +469,140 @@
                 </div>
             </div>
             </div>
+            <!-- 4th -->
+            <div class="card flex-row colmun">
+                <div class="col-left card-image">
+                    <div class="card-bg-img">
+                    <img src="ananya.jpg" alt="card background image">
+                    </div>
+                <div class="profile-img">
+                <img src="ananya.jpg" alt="Ananya">
+                </div>
+            </div>
+            <div class="col-right card-info">
+                <div class="card-info-inner">
+                <h2>Hello, I'm Ananya H N</h2>
+                <p>Sophomore at NMAMIT<br>Web Developer</p>
+                <ul class="social">
+                    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                </ul>
+                </div>
+            </div>
+            </div>
+            <!-- 5th -->
+            <div class="card flex-row colmun">
+                <div class="col-left card-image">
+                    <div class="card-bg-img">
+                    <img src="supreetha.jpg" alt="card background image">
+                    </div>
+                <div class="profile-img">
+                <img src="supreetha.jpg" alt="Supreetha">
+                </div>
+            </div>
+            <div class="col-right card-info">
+                <div class="card-info-inner">
+                <h2>Hello, I'm Supreetha Nayak</h2>
+                <p>Sophomore at NMAMIT <br>Web Developer</p>
+                <ul class="social">
+                    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                </ul>
+                </div>
+            </div>
+            </div>
+            <!-- 6th -->
+            <div class="card flex-row colmun">
+                <div class="col-left card-image">
+                    <div class="card-bg-img">
+                    <img src="suryanshu.jpg" alt="card background image">
+                    </div>
+                <div class="profile-img">
+                <img src="suryanshu.jpg" alt="Suryanshu">
+                </div>
+            </div>
+            <div class="col-right card-info">
+                <div class="card-info-inner">
+                <h2>Hello, I'm Suryanshu Choudhary</h2>
+                <p>Sophomore at NMAMIT<br>Web Developer</p>
+                <ul class="social">
+                    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                </ul>
+                </div>
+            </div>
+            </div>
+            <!-- 7th -->
+            <div class="card flex-row colmun">
+                <div class="col-left card-image">
+                    <div class="card-bg-img">
+                    <img src="thaskeen.jpg" alt="card background image">
+                    </div>
+                <div class="profile-img">
+                <img src="thaskeen.jpg" alt="Thaskeen">
+                </div>
+            </div>
+            <div class="col-right card-info">
+                <div class="card-info-inner">
+                <h2>Hello, I'm Thaskeen</h2>
+                <p>Sophomore at NMAMIT <br>Web Developer</p>
+                <ul class="social">
+                    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                </ul>
+                </div>
+            </div>
+            </div>
+            <!-- 8th -->
+            <div class="card flex-row colmun">
+                <div class="col-left card-image">
+                    <div class="card-bg-img">
+                    <img src="prajwal.jpg" alt="card background image">
+                    </div>
+                <div class="profile-img">
+                <img src="prajwal.jpg" alt="prajwal">
+                </div>
+            </div>
+            <div class="col-right card-info">
+                <div class="card-info-inner">
+                <h2>Hello, I'm Prajwal</h2>
+                <p>Sophomore at NMAMIT <br>Web Developer</p>
+                <ul class="social">
+                    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                </ul>
+                </div>
+            </div>
+            </div>
+            <!-- 9th -->
+            <center>
+                <div class="card flex-row colmun">
+                <div class="col-left card-image">
+                    <div class="card-bg-img">
+                    <img src="sourabh.jpg" alt="card background image">
+                    </div>
+                <div class="profile-img">
+                <img src="sourabh.jpg" alt="Sourabh">
+                </div>
+            </div>
+            <div class="col-right card-info">
+                <div class="card-info-inner">
+                <h2>Hello, I'm Sourabh Shenoy</h2>
+                <p>Sophomore at NMAMIT <br>Team Lead | Web Developer | <br> UI & UX Designer</p>
+                <ul class="social">
+                    <li><a href="https://www.instagram.com/sourabh.shenoy"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/sourabh-shenoy-4b8781232/"><i class="fa fa-linkedin"></i></a></li>
+                </ul>
+                </div>
+            </div>
+            </div>
+        </center>
     </section>
 
 
