updated Our team section

--- a/index.html
+++ b/index.html
@@ -473,10 +473,10 @@
             <div class="card flex-row colmun">
                 <div class="col-left card-image">
                     <div class="card-bg-img">
-                    <img src="ananya.jpg" alt="card background image">
+                    <img src="images\ananya.jpg" alt="card background image">
                     </div>
                 <div class="profile-img">
-                <img src="ananya.jpg" alt="Ananya">
+                <img src="images\ananya.jpg" alt="Ananya">
                 </div>
             </div>
             <div class="col-right card-info">
@@ -495,10 +495,10 @@
             <div class="card flex-row colmun">
                 <div class="col-left card-image">
                     <div class="card-bg-img">
-                    <img src="supreetha.jpg" alt="card background image">
+                    <img src="images\supreetha.jpg" alt="card background image">
                     </div>
                 <div class="profile-img">
-                <img src="supreetha.jpg" alt="Supreetha">
+                <img src="images\supreetha.jpg" alt="Supreetha">
                 </div>
             </div>
             <div class="col-right card-info">
@@ -517,10 +517,10 @@
             <div class="card flex-row colmun">
                 <div class="col-left card-image">
                     <div class="card-bg-img">
-                    <img src="suryanshu.jpg" alt="card background image">
+                    <img src="images\suryanshu.jpg" alt="card background image">
                     </div>
                 <div class="profile-img">
-                <img src="suryanshu.jpg" alt="Suryanshu">
+                <img src="images\suryanshu.jpg" alt="Suryanshu">
                 </div>
             </div>
             <div class="col-right card-info">
@@ -539,10 +539,10 @@
             <div class="card flex-row colmun">
                 <div class="col-left card-image">
                     <div class="card-bg-img">
-                    <img src="thaskeen.jpg" alt="card background image">
+                    <img src="images\thaskeen.jpg" alt="card background image">
                     </div>
                 <div class="profile-img">
-                <img src="thaskeen.jpg" alt="Thaskeen">
+                <img src="images\thaskeen.jpg" alt="Thaskeen">
                 </div>
             </div>
             <div class="col-right card-info">
@@ -561,10 +561,10 @@
             <div class="card flex-row colmun">
                 <div class="col-left card-image">
                     <div class="card-bg-img">
-                    <img src="prajwal.jpg" alt="card background image">
+                    <img src="images\prajwal.jpg" alt="card background image">
                     </div>
                 <div class="profile-img">
-                <img src="prajwal.jpg" alt="prajwal">
+                <img src="images\prajwal.jpg" alt="prajwal">
                 </div>
             </div>
             <div class="col-right card-info">
@@ -584,10 +584,10 @@
                 <div class="card flex-row colmun">
                 <div class="col-left card-image">
                     <div class="card-bg-img">
-                    <img src="sourabh.jpg" alt="card background image">
+                    <img src="images\sourabh.jpg" alt="card background image">
                     </div>
                 <div class="profile-img">
-                <img src="sourabh.jpg" alt="Sourabh">
+                <img src="images\sourabh.jpg" alt="Sourabh">
                 </div>
             </div>
             <div class="col-right card-info">
