--- a/index.html
+++ b/index.html
@@ -572,9 +572,9 @@
                 <h2>Hello, I'm Prajwal</h2>
                 <p>Sophomore at NMAMIT <br>Web Developer</p>
                 <ul class="social">
-                    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="https://instagram.com/prajwalp_11?igshid=YmMyMTA2M2Y="><i class="fa fa-instagram"></i></a></li>
                     <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/prajwal-p-28a924249"><i class="fa fa-linkedin"></i></a></li>
                 </ul>
                 </div>
             </div>
