Edited the names

--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
             </div>
             <div class="col-right card-info">
                 <div class="card-info-inner">
-                <h2>Hello, I'm Thaskeen</h2>
+                <h2>Hello, I'm Fathima Thaskeen</h2>
                 <p>Sophomore at NMAMIT <br>Web Developer</p>
                 <ul class="social">
                     <li><a href="#"><i class="fa fa-instagram"></i></a></li>
@@ -569,7 +569,7 @@
             </div>
             <div class="col-right card-info">
                 <div class="card-info-inner">
-                <h2>Hello, I'm Prajwal</h2>
+                <h2>Hello, I'm Prajwal P</h2>
                 <p>Sophomore at NMAMIT <br>Web Developer</p>
                 <ul class="social">
                     <li><a href="https://instagram.com/prajwalp_11?igshid=YmMyMTA2M2Y="><i class="fa fa-instagram"></i></a></li>
