--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
             <div class="col-right card-info">
                 <div class="card-info-inner">
                 <h2>Hello, I'm Sourabh Shenoy</h2>
-                <p>Sophomore at NMAMIT <br>Team Lead | Front-End Web Developer | <br> UI & UX Designer</p>
+                <p>Sophomore at NMAMIT <br>Team Lead </p>
                 <ul class="social">
                     <li><a href="https://www.instagram.com/sourabh.shenoy"><i class="fa fa-instagram"></i></a></li>
                     <li><a href="#"><i class="fa fa-twitter"></i></a></li>
